[tool.poetry]
name = "p7dschq7l8"
version = "0.1.0"
description = ""
authors = ["rishi <rishi.padman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.3"
halo = "^0.0.28"
pyfiglet = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
